# ER-forecast

./: .dockerignore  .env  .env.example  Dockerfile.prediction  Dockerfile.training  Makefile  README.md  api_subprocess.py  docker-compose.jobs.yml  docker-compose.services.yml  pyproject.toml  pytest.ini  test_parse_db_result.py
data/predictions/: all_horizons_test_predictions.csv  horizon_1_test_predictions.csv  horizon_2_test_predictions.csv  horizon_3_test_predictions.csv  horizon_4_test_predictions.csv  horizon_5_test_predictions.csv  horizon_6_test_predictions.csv  horizon_7_test_predictions.csv
data/processed/: daily_patients.csv  featured_data.csv  weather_data.csv
data/raw/: raw_real.csv
flows/: __init__.py  prediction_flow.py  training_flow.py  utils.py
logs/: training_summary_20251031_110609.md  training_summary_20251031_113048.md  training_summary_20251031_121339.md  training_summary_20251124_172712.md  training_summary_20251124_183137.md  training_summary_20251124_183932.md  training_summary_20251124_184139.md  training_summary_20251206_023125.md  training_summary_20251206_024626.md  training_summary_20251206_025429.md  training_summary_20251206_030315.md  training_summary_20251208_143408.md  training_summary_20251208_144728.md  training_summary_20251210_162524.md  training_summary_20251210_162828.md
ml_api/: api.py  logs.txt
mlruns/0/: meta.yaml
mlruns/697696622517731534/: meta.yaml
models/: forecaster_horizon_1.pkl  forecaster_horizon_2.pkl  forecaster_horizon_3.pkl  forecaster_horizon_4.pkl  forecaster_horizon_5.pkl  forecaster_horizon_6.pkl  forecaster_horizon_7.pkl
plots/: Thumbs.db
scripts/: predict_and_visualize.py  process_and_save_data.py  test_full_system.py  test_minio_integration.py  test_prediction.py  train_standalone.py  visualize_predictions.py
services/grafana/: grafana_dashboards.yml  grafana_datasources.yml
services/mlflow/: Dockerfile
services/postgres/: init.sql
src/data/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py
(+28 files in other folders)
