[project]
name = "er-patient-forecast-mlops"
version = "0.1.0"
description = "On-premises MLOps system for ER patient forecasting with automated training and daily predictions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Oliver Groth", email = "oliver@fyris.ai"}
]

dependencies = [
    # Data manipulation and analysis
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    # Machine learning
    "scikit-learn>=1.3.0",
    "lightgbm>=4.1.0",
    "optuna>=3.4.0",
    # MLOps infrastructure
    "mlflow>=2.8.0",
    "prefect>=2.14.0",
    "boto3>=1.34.10",
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "pyodbc>=5.0.0",
    # API and utilities
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    # Monitoring
    "prometheus-client>=0.19.0",
    # Serialization
    "joblib>=1.3.2",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.26.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "flows"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []
